--- a/localdb/pubspec.yaml
+++ b/localdb/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.3.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
