--- a/statmanagment/pubspec.yaml
+++ b/statmanagment/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   http: ^1.2.2
+  flutter_svg: ^2.0.16
 
 dev_dependencies:
   flutter_test:
